Refactor to use plain SVG and adds Greensock for transition animations
Also:
- implements trash icon to remove all assigned samples
- improved app icon to match current color pallette
- enter key to control playback
- completely removes Snap. Just using plain SVG now :)
- uses Greensock API (gsap) for the tweening animation parts
- better organization of css

--- a/src/styles/breakpoints.scss
+++ b/src/styles/breakpoints.scss
@@ -15,9 +15,11 @@
             "soundbank"
             "shape"
             "controls"
+            "secondaryControls"
             "dotsChooser"
             "sheetToggle"
             "sheet";
+
     }
     #bpms {
         --border-width: 3px;
@@ -36,13 +38,14 @@
     #app {
         grid-template-columns: auto;
         grid-template-areas:
-            "header      header"
-            "bpms        bpms"
-            "soundbank   shape"
-            "controls    controls"
-            "dotsChooser dotsChooser"
-            "sheetToggle sheetToggle"
-            "sheet       sheet";
+            "header            header"
+            "bpms              bpms"
+            "soundbank         shape"
+            "controls          controls"
+            "dotsChooser       dotsChooser"
+            "secondaryControls secondaryControls"
+            "sheetToggle       sheetToggle"
+            "sheet             sheet";
     }
     #bpms {
         --border-width: 3px;
