--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,7 +2,8 @@
     --accent: rgb(248, 187, 43);
     --light-grey: rgb(232, 232, 232);
     --dark-grey: rgb(150, 160, 171);
-    --white: white;
+    --white: rgb(248, 249, 250);
+    --bg: var(--white);
     font-family: Arial, Helvetica, sans-serif;
 }
 
