--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -4,7 +4,12 @@
     --dark-grey: rgb(150, 160, 171);
     --white: rgb(248, 249, 250);
     --bg: var(--white);
-    font-family: Arial, Helvetica, sans-serif;
+        font-family: 'Avenir', Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    color: #2c3e50;
+
 }
 
 .no-select {
