--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -9,10 +9,9 @@
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #2c3e50;
-
 }
 
-.no-select {
+#app {
     user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
