--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -8,7 +8,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
-    color: #000033;
+    color: black;
 }
 
 #app {
